--- a/test-push.html
+++ b/test-push.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>dfghjkl;';lhgfxcvbnm,./.,mbvc
 <head>
   <title>Voting Application</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
