--- a/test-push.html
+++ b/test-push.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>WERTYULKJHVCVBJFCVBK,MBNBCVBFCFUOI
 <html>dfghjkl;';lhgfxcvbnm,./.,mbvc
 <head>
   <title>Voting Application</title>
